--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "yup": "^0.32.11"
   }
 }
