--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@vercel/node": "^1.12.1"
   },
   "dependencies": {
+    "arima": "^0.2.5",
     "axios": "^0.24.0",
-    "crypto-js": "^4.1.1",
-    "yup": "^0.32.11"
+    "crypto-js": "^4.1.1"
   }
 }
